crates/notify/tests/snapshots/payloads__discord_three_changes.snap
---
source: crates/notify/tests/payloads.rs
expression: "json(&discord::payload(&changes(3)))"
---
{
  "allowed_mentions": {
    "parse": []
  },
  "content": "3 changes on example.com",
  "embeds": [
    {
      "color": 15026253,
      "description": ":red_circle: **Became noindex** <https://example.com/page-0>: index → noindex\n:orange_circle: **Status changed** <https://example.com/page-1>: 200 → 500\n:blue_circle: **Title changed** <https://example.com/page-2>: index → noindex",
      "title": "example.com",
      "url": "https://codoseo.com/sites/abc"
    }
  ]
}
