crates/notify/tests/snapshots/payloads__email_four_hundred_changes.snap
---
source: crates/notify/tests/payloads.rs
expression: email_snapshot(&changes(400))
---
to: owner@example.com
subject: CodoSEO: 400 changes on example.com
--- text ---
400 changes on example.com

[Critical] Became noindex
  https://example.com/page-0
  index → noindex
[Warning] Status changed
  https://example.com/page-1
  200 → 500
[Notice] Title changed
  https://example.com/page-2
  index → noindex
[Critical] Became noindex
  https://example.com/page-3
  index → noindex
[Warning] Status changed
  https://example.com/page-4
  200 → 500
[Notice] Title changed
  https://example.com/page-5
  index → noindex
[Critical] Became noindex
  https://example.com/page-6
  index → noindex
[Warning] Status changed
  https://example.com/page-7
  200 → 500
[Notice] Title changed
  https://example.com/page-8
  index → noindex
[Critical] Became noindex
  https://example.com/page-9
  index → noindex
[Warning] Status changed
  https://example.com/page-10
  200 → 500
[Notice] Title changed
  https://example.com/page-11
  index → noindex
[Critical] Became noindex
  https://example.com/page-12
  index → noindex
[Warning] Status changed
  https://example.com/page-13
  200 → 500
[Notice] Title changed
  https://example.com/page-14
  index → noindex
[Critical] Became noindex
  https://example.com/page-15
  index → noindex
[Warning] Status changed
  https://example.com/page-16
  200 → 500
[Notice] Title changed
  https://example.com/page-17
  index → noindex
[Critical] Became noindex
  https://example.com/page-18
  index → noindex
[Warning] Status changed
  https://example.com/page-19
  200 → 500

and 380 more.

Open in CodoSEO: https://codoseo.com/sites/abc

--- html ---
<h2 style="font-size:18px">400 changes on example.com</h2>
<ul>
<li><strong>Became noindex</strong> (critical)<br><a href="https://example.com/page-0">https://example.com/page-0</a><br>index → noindex</li>
<li><strong>Status changed</strong> (warning)<br><a href="https://example.com/page-1">https://example.com/page-1</a><br>200 → 500</li>
<li><strong>Title changed</strong> (notice)<br><a href="https://example.com/page-2">https://example.com/page-2</a><br>index → noindex</li>
<li><strong>Became noindex</strong> (critical)<br><a href="https://example.com/page-3">https://example.com/page-3</a><br>index → noindex</li>
<li><strong>Status changed</strong> (warning)<br><a href="https://example.com/page-4">https://example.com/page-4</a><br>200 → 500</li>
<li><strong>Title changed</strong> (notice)<br><a href="https://example.com/page-5">https://example.com/page-5</a><br>index → noindex</li>
<li><strong>Became noindex</strong> (critical)<br><a href="https://example.com/page-6">https://example.com/page-6</a><br>index → noindex</li>
<li><strong>Status changed</strong> (warning)<br><a href="https://example.com/page-7">https://example.com/page-7</a><br>200 → 500</li>
<li><strong>Title changed</strong> (notice)<br><a href="https://example.com/page-8">https://example.com/page-8</a><br>index → noindex</li>
<li><strong>Became noindex</strong> (critical)<br><a href="https://example.com/page-9">https://example.com/page-9</a><br>index → noindex</li>
<li><strong>Status changed</strong> (warning)<br><a href="https://example.com/page-10">https://example.com/page-10</a><br>200 → 500</li>
<li><strong>Title changed</strong> (notice)<br><a href="https://example.com/page-11">https://example.com/page-11</a><br>index → noindex</li>
<li><strong>Became noindex</strong> (critical)<br><a href="https://example.com/page-12">https://example.com/page-12</a><br>index → noindex</li>
<li><strong>Status changed</strong> (warning)<br><a href="https://example.com/page-13">https://example.com/page-13</a><br>200 → 500</li>
<li><strong>Title changed</strong> (notice)<br><a href="https://example.com/page-14">https://example.com/page-14</a><br>index → noindex</li>
<li><strong>Became noindex</strong> (critical)<br><a href="https://example.com/page-15">https://example.com/page-15</a><br>index → noindex</li>
<li><strong>Status changed</strong> (warning)<br><a href="https://example.com/page-16">https://example.com/page-16</a><br>200 → 500</li>
<li><strong>Title changed</strong> (notice)<br><a href="https://example.com/page-17">https://example.com/page-17</a><br>index → noindex</li>
<li><strong>Became noindex</strong> (critical)<br><a href="https://example.com/page-18">https://example.com/page-18</a><br>index → noindex</li>
<li><strong>Status changed</strong> (warning)<br><a href="https://example.com/page-19">https://example.com/page-19</a><br>200 → 500</li>
</ul>
<p>and 380 more.</p>
<p><a href="https://codoseo.com/sites/abc">Open in CodoSEO</a></p>
